@@ -1,5 +1,11 @@
 2007-10-28  Jonathon Jongsma  <jjongsma@gnome.org>
 
+	* clutter/cluttermm.h: cleaned up the one-include-to-rule-them-all so that
+	it includes all of the header files created so far and so that it has proper
+	copyright information.  Also removed some commented-out cruft
+
+2007-10-28  Jonathon Jongsma  <jjongsma@gnome.org>
+
 	* clutter/cluttermm.h: changed the #include guard from LIBGOOCANVASMM_H to
 	LIBCLUTTERMM_H
 	* clutter/src/clutter_vfuncs.defs: removed a whole bunch of goocanvasmm
